--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -1,1 +1,21 @@
 
+#spring:
+  #cloud:
+    #config:
+      #server:
+        #git:
+          #uri: https://git.coding.net/yirenyishi/springcloud-config-profile
+          #searchPaths: '{application}'
+          #username: jiangfumei
+          #password: jfm19961106
+          #default-label: master
+          #search-paths: /doc/config
+      #name: cloud
+      #profile: dev
+      #label: master
+#eureka:
+  #client:
+    #serviceUrl:
+      #defaultZone: http://localhost:9990/eureka/
+  #instance:
+    #prefer-ip-address: true
