--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -1,21 +1,31 @@
 
-#spring:
-  #cloud:
-    #config:
-      #server:
-        #git:
-          #uri: https://git.coding.net/yirenyishi/springcloud-config-profile
-          #searchPaths: '{application}'
-          #username: jiangfumei
-          #password: jfm19961106
-          #default-label: master
-          #search-paths: /doc/config
-      #name: cloud
-      #profile: dev
-      #label: master
-#eureka:
-  #client:
-    #serviceUrl:
-      #defaultZone: http://localhost:9990/eureka/
-  #instance:
-    #prefer-ip-address: true
+spring:
+  application:
+    name: cloud-config
+  #profiles:
+    #active: online
+    #active: dev
+
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/jiangfumei/cloud
+          search-paths: /api/**   #表示只要访问以/api/开头的多层目录都可以路由到 id为client的服务上
+          username: jiangfumei
+          password: jfm19961106
+          clone-on-start: true #开启启动时直接从git获取配置
+          default-label: master
+      name:
+      profile:
+      label:
+
+server:
+  port: 7990
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:9990/eureka/
+  instance:
+    prefer-ip-address: true
