--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,11 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
+	<!-- 父pom.xml中的必须为pom类型 -->
+	<packaging>pom</packaging>
+
 	<groupId>com.spring</groupId>
 	<artifactId>cloud</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -16,6 +19,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
 	</properties>
 
 	<dependencies>
@@ -37,6 +41,19 @@
 		</dependency>
 	</dependencies>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+
 	<build>
 		<plugins>
 			<plugin>
@@ -45,5 +62,11 @@
 			</plugin>
 		</plugins>
 	</build>
+	<!-- 子模块 -->
+	<modules>
+		<module>server</module>      <!-- eureka注册中心 -->
+		<module>client</module> 	 <!-- 微服务的网关服务 提供者 -->
+		<module>config</module>   	 <!-- 微服务的配置中心模块 -->
+	</modules>
 
 </project>
