delete parent src folder

--- a/pom.xml
+++ b/pom.xml
@@ -63,9 +63,8 @@
 	</build>
 	<!-- 子模块 -->
 	<modules>
-		<module>server</module>      <!-- eureka注册中心 -->
+		<module>server</module>      <!-- eureka服务注册发现中心 -->
 		<module>client</module> 	 <!-- 微服务的网关服务 提供者 -->
 		<module>config</module>   	 <!-- 微服务的配置中心模块 -->
 	</modules>
-
 </project>
