--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.spring</groupId>
         <artifactId>cloud</artifactId>
@@ -10,12 +9,11 @@
         <relativePath>../</relativePath>
     </parent>
 
-
     <groupId>com.eureka</groupId>
-    <artifactId>client</artifactId>
+    <artifactId>consumer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>client</name>
-    <description>Demo project for Spring Cloud Eureka Client</description>
+    <name>consumer</name>
+    <description>Demo project for Spring Cloud Feign Consumer</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -23,23 +21,15 @@
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
+        <!-- Ribbon 作为负载均衡 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+            <artifactId>spring-cloud-starter-ribbon</artifactId>
         </dependency>
-
     </dependencies>
-
 
 </project>
