--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -8,9 +8,9 @@ server:
   port: 9990
 eureka:
   client:
-    fetch-registry: false
-    register-with-eureka: false
+    fetch-registry: false       # 表示是否从Eureka Server获取注册信息，默认为true。
+    register-with-eureka: false # 表示是否将自己注册到Eureka Server，默认为true。
     service-url:
-      defaultZone: ${server.host}:${server.port}/eureka/
+      defaultZone: ${server.host}:${server.port}/eureka/   # 设置与Eureka Server交互的地址，查询服务和注册服务都需要依赖这个地址。默认是http://localhost:9990/eureka ；多个地址可使用,分隔
   instance:
     prefer-ip-address: true
