--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -8,7 +8,10 @@ server:
 
 eureka:
   client:
+    register-with-eureka: true  #注册到Eureka的注册中心
+    fetch-registry: true  #获取注册实例列表
     serviceUrl:
       defaultZone: http://localhost:9990/eureka/
   instance:
     prefer-ip-address: true
+
