--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 
 spring:
   application:
-    name: cloud-config
+    name: springcloud-config-server
   #profiles:
     #active: online
     #active: dev
