--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -29,6 +29,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-ribbon</artifactId>
+            <version>1.4.7.RELEASE</version>
         </dependency>
     </dependencies>
 
