--- a/feign/src/main/resources/application.yml
+++ b/feign/src/main/resources/application.yml
@@ -12,3 +12,7 @@ eureka:
       defaultZone: http://localhost:9990/eureka/
   instance:
     prefer-ip-address: true
+
+feign:
+  hystrix:
+    enabled: true
