--- a/feign/pom.xml
+++ b/feign/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>2.2.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-metrics-event-stream</artifactId>
+            <version>1.5.18</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
