--- a/feign/src/main/resources/application.yml
+++ b/feign/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 
 spring:
   application:
-    name: springcloud-consumer-feign
+    name: consumer-feign
 
 server:
   port: 6990
@@ -11,7 +11,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:9990/eureka/
   instance:
-    prefer-ip-address: true
+                         prefer-ip-address: true
 
 feign:
   hystrix:
