--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -15,6 +15,12 @@
     <description>Demo project for Spring Cloud Zuul</description>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
