--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -7,6 +7,18 @@ spring:
       label: master
       profile: dev
       uri: http://localhost:3990/
+      bus:
+        enabled: true
+        trace:
+          enabled: true
 
 server:
   port: 3991
+
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
