--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -2,6 +2,12 @@ spring:
   application:
     name: config-client
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
   cloud:
     config:
       label: master
@@ -11,6 +17,9 @@ spring:
         enabled: true
         trace:
           enabled: true
+      discovery:
+        enabled: true
+        service-id: config-server
 
 server:
   port: 3991
@@ -22,3 +31,7 @@ management:
     web:
       exposure:
         include: bus-refresh
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9990/eureka/
