--- a/service-myya/src/main/resources/application.yml
+++ b/service-myya/src/main/resources/application.yml
@@ -1,5 +1,23 @@
 spring:
   application:
     name: service-myya
+  sleuth:
+    web:
+      client:
+        enabled: true
+    sampler:
+      probability: 1.0 # 将采样比例设置为 1.0，也就是全部都需要。默认是 0.1
+    zipkin:
+      base-url: http://localhost:9411/ # 指定了 Zipkin 服务器的地址
 server:
-  port: 8989
+  port: 9977
+
+eureka:
+  client:
+    #register-with-eureka: true  #注册到Eureka的注册中心
+    #fetch-registry: true  #获取注册实例列表
+    serviceUrl:
+      defaultZone: http://localhost:9990/eureka/
+  instance:
+    prefer-ip-address: true
+
