--- a/zipkin/src/main/resources/application.yml
+++ b/zipkin/src/main/resources/application.yml
@@ -1,8 +1,22 @@
 server:
-  port: 2999
+  port: 1999
 spring:
   application:
     name: zipkin
-
+  sleuth:
+    web:
+      client:
+        enabled: true
+    sampler:
+      probability: 1.0 # 将采样比例设置为 1.0，也就是全部都需要。默认是 0.1
   zipkin:
     base-url: http://localhost:9411
+
+eureka:
+  client:
+    #register-with-eureka: true  #注册到Eureka的注册中心
+    #fetch-registry: true  #获取注册实例列表
+    serviceUrl:
+      defaultZone: http://localhost:9990/eureka/
+  instance:
+    prefer-ip-address: true
