--- a/service-turbine/src/main/resources/application.yml
+++ b/service-turbine/src/main/resources/application.yml
@@ -25,4 +25,4 @@ turbine:
   clusterNameExpression: new String("default")
   combine-host: true
   instanceUrlSuffix:
-    default: actuator/hystrix.stream
+    default: /hystrix.stream
