--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.2.RELEASE</version>
+		<relativePath/>
 	</parent>
 
 	<!-- 父pom.xml中的必须为pom类型 -->
