--- a/client/src/main/resources/config/application-dev.yml
+++ b/client/src/main/resources/config/application-dev.yml
@@ -1,14 +1,14 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.246:4306/go-one?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/go-one?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: 123456
+    password: jfm
     driverClassName: com.mysql.jdbc.Driver
 
   redis:
     database: 6
-    host: 192.168.1.246
+    host: 127.0.0.1
     port: 6379
     password:
     timeout: 3s
